# quillion-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: format.yml  publish.yml  test.yml
hi/: app.py  quillion.toml
hi/.q/: index.html
hi/.q/pkg/: package.json  quillion.d.ts  quillion.js  quillion_bg.wasm  quillion_bg.wasm.d.ts
quillion_cli/: cli.py
quillion_cli/.templates/: .gitignore  quillion.toml.j2
quillion_cli/.templates/.q/: index.html.j2
quillion_cli/commands/: new.py  run.py
quillion_cli/config/: loader.py  models.py
quillion_cli/server/: http_server.py  websocket_server.py
quillion_cli/utils/: file_downloader.py  file_watcher.py  name_formatter.py  templates.py
tests/: test_debugger.py  test_downloader.py  test_file_watcher.py  test_http_server.py  test_new.py  test_run.py  test_templates.py  test_websocket_server.py
