[tool.poetry]
name = "quillion-cli"
version = "0.1.2"
description = "Quillion Command Line Interface"
authors = ["anybody"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.19.1"
rich = "^14.1.0"
pyfiglet = "^1.0.4"
watchdog = "^6.0.0"
jinja2 = "^3.1.2"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"